update conf,fix css load bug.fix @types/cropper load bug

--- a/src/ngx-cropper.component.css
+++ b/src/ngx-cropper.component.css
@@ -68,3 +68,7 @@
 .crop-box .crop-box-close span::before {
   content: "x";
 }
+
+.inline-block {
+  display: inline-block;
+}
